
o Add information on kinship-based relatedness to kinship sum test results.
o Keep memory consumption constant. This allows arbitrary long simulation
  runs without running out of memory. Fixes issue #22. Due to the solution
  of that problem, histograms and densities reported by the simulation
  functions may slightly deviate from comparable former runs on the same
  data.


CHANGES in VERSION 1.19.1
-------------------------

o Add kinshipPairs function


CHANGES in VERSION 1.17.1
-------------------------

o Fix issue #20 (binary trait drops names upon conversion).


CHANGES IN VERSION 1.13.3
-------------------------

o Fix cex issue when plotting pedigrees. Starts adding label1 text in the
  second line of individual ID text size and outputs this text at 80% size.

o Plot label2 and label3 text at 80% of the main text size.


CHANGES IN VERSION 1.13.2
-------------------------

o Big text blocks for label1 pedigree plotting generated by '\n' concatenation
  only grow towards the bottom of the canvas.

o Take into account cex when positioning label1 text.


CHANGES IN VERSION 1.13.1
-------------------------

o Parameters id.col, father.col, mother.col, family.col and sex.col for FAData
  allow now to specify the column names for the respective content also if
  a data.frame is provided.


CHANGES IN VERSION 1.11.5
-------------------------

o Ensure same ordering of pedigree and provided labels in buildPed (issue #19).


CHANGES IN VERSION 1.11.4
-------------------------

o Fix bug in buildPed with prune = TRUE that resulted in either a missing mother
  or father in some complicated family structures.


CHANGES IN VERSION 1.11.3
-------------------------

o Fixed bug in buildPed missing out mates in some special cases.
o Fixed bug in buildPed causing differences between individual IDs and rownames
  of the pedigree data.frame.


CHANGES IN VERSION 1.11.2
-------------------------

o Fix corner case in generating plotting data pedigree.